--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,17 @@ services:
       - ./app:/app
     command: >
       sh -c "python manage.py runserver 0.0.0.0:8000"
+    environment:
+      - DB_HOST=DB
+      - DB_NAME=app
+      - DB_USER=postgres
+      - DB_PASS=pass123
+    depends_on:
+      - db
+  
+  db:
+    image: postgres:12-alpine
+    environment:
+      - POSTGRES_DB=python_rest_api
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=pass123
