--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - DB_NAME=python_rest_api
       - DB_USER=postgres
       - DB_PASS=pass123
+    restart: always
     depends_on:
       - db
   
