--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,8 @@ services:
       - DB_PASS=pass123
     depends_on:
       - db
+    links: 
+      - db:db
   
   db:
     image: postgres:12-alpine
