--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,8 +17,6 @@ services:
       - DB_PASS=pass123
     depends_on:
       - db
-    links: 
-      - db:db
   
   db:
     image: postgres:12-alpine
@@ -26,3 +24,5 @@ services:
       - POSTGRES_DB=python_rest_api
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=pass123
+    ports:
+      - 5432:5432
